[package]
name = "dynamic-pool"
version = "0.2.2"
authors = ["jake <jh@discordapp.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "a lock-free, thread-safe, dynamically-sized object pool."
repository = "https://github.com/discordapp/dynamic-pool"
homepage = "https://github.com/discordapp/dynamic-pool"
documentation = "https://docs.rs/dynamic-pool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ttl"]
ttl = ["tokio"]

[dependencies]
crossbeam-queue = "0.2"
crossbeam-utils = "0.8.21"
dashmap = "6.1.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "time", "macros"], optional = true }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }